5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1582_2896.log
== SUBMITION (2019-03-12 17:43:01) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = 

# Impressao de saidas
print()
-- EXECUTION TIME:
0.159265
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 4
    var = 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:43:05) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = 

# Impressao de saidas
print(a)
-- EXECUTION TIME:
0.185425
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 4
    var = 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:34) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = 

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:53) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = input("a") 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input() 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:43:55) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = input("a") 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.199279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 4, in <module>
    var = input() 
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:31) 
-- CODE:
# Use este codigo como ponto de partida
a=input()
# Leitura de valores de entrada
var = input("Digite o nome: ") 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input() 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:59) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = input("a") 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input() 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:15) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = input(a) 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(a) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:22) 
-- CODE:
# Use este codigo como ponto de partida
a=input("escreva aqui:")
# Leitura de valores de entrada
var = input(a) 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.249717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 4, in <module>
    var = input(a) 
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:50) 
-- CODE:
# Use este codigo como ponto de partida
a=input("Digite o nome: ")
# Leitura de valores de entrada
var = input(a) 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.155707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 4, in <module>
    var = input(a) 
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:51) 
-- CODE:
# Use este codigo como ponto de partida
a=input("Digite o nome: ")
# Leitura de valores de entrada
var = input(a) 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(a) 
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:11) 
-- CODE:
# Use este codigo como ponto de partida
a=input("Digite o nome: ")
# Leitura de valores de entrada
var = input(a) 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.166596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 4, in <module>
    var = input(a) 
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:12:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ") 

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:12:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ") 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.220188
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
